# cothis

./: AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/tools/: code_lines.py  context7.yaml  hello.py
.github/workflows/: ci.yml  update-model-prices.yml
docs/adr/: 0001-yaml-tool-type-driven-execution.md  0002-tool-lifecycle-hooks.md  0003-layer-precedence-and-hook-target.md  0004-async-tool-dispatch.md  0005-mcp-session-lifecycle.md  0005-tools-package-redesign.md  0006-anthropic-messages-api-migration.md  0006-mcp-tool-name-prefix.md  0007-resolve-max-tokens-from-litellm.md  0007-tools-package-split-and-python-extension-shape.md  0008-resource-handles.md  0008-session-write-retry-queue.md  0009-session-close-lock-contract.md  0010-session-fork-tree.md  0011-cold-hot-archival-startup-wiring.md  0012-cold-hot-delete-extension.md  0013-cold-hot-archival.md  0014-agent-skills-lifecycle.md  0015-fs-tool-split.md  0016-durable-notify-bus.md  0017-session-worker.md  0018-supervisor.md  0019-tui-core.md
docs/agents/: domain.md
src/cothis/: __init__.py  (+12 more)
tests/: test_active_skills_footer.py  test_agent.py  test_boundary_fail_loud_audit.py  test_build_schema_warnings.py  test_cli.py  test_cli_archive_cmds.py  test_cli_session_cmds.py  test_code_lines_schema.py  test_consecutive_role_merge.py  test_context_skip.py  test_deactivate_skill.py  test_deactivate_skill_order.py  test_deactivate_skill_schema.py  test_format_unicode.py  test_fs_create_delete.py  test_fs_hygiene.py  test_fs_list.py  test_fs_list_schema.py  test_fs_modify.py  test_fs_read_schema.py  test_fs_resource_caps.py  test_fs_search_perf.py  test_fs_search_schema.py  test_fs_write.py  test_fs_write_schema.py  test_griffe_deferred.py  test_load_skill.py  test_load_skill_schema.py  test_mcp_handle_pin.py  test_mcp_tools.py  test_model_metadata.py  test_notify_bus.py  test_notify_bus_wiring.py  test_notify_retention.py  test_patch.py  test_preactivation.py  test_preactivation_request_shape.py  test_projection_contracts.py  test_queued_archive.py  test_release_cancel.py  (+24 more)
(+26 files in other folders)
