[project]
name = "cothis"
version = "0.1.0"
description = "A basic coding agent."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "gemo", email = "git@gemo.one" }
]
requires-python = ">=3.14"
dependencies = [
    "any-llm-sdk[all]>=1.17.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
cothis = "cothis.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff.lint]
select = ["I", "TC", "UP"]
