[project]
name = "cothis"
version = "0.1.0"
description = "A complete coding agent."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "gemo", email = "git@gemo.one" }
]
requires-python = ">=3.14"
dependencies = [
    "any-llm-sdk[all]>=1.17.0",
    "griffe>=2.1.0",
    "mcp>=1.28.1",
    "pathspec>=0.12.1",
    "prompt-toolkit>=3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
cothis = "cothis.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
    "time-machine>=3.2.0",
    "ty>=0.0.51",
]

[tool.ruff.lint]
select = ["I", "TC", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
